[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/core/template.gd" type="Script" id=1]
[ext_resource path="res://views/editor/inspector/inspector.tscn" type="PackedScene" id=2]
[ext_resource path="res://views/editor/viewport.tscn" type="PackedScene" id=3]
[ext_resource path="res://views/editor/editor_view.gd" type="Script" id=4]
[ext_resource path="res://views/editor/add_node_panel.tscn" type="PackedScene" id=5]
[ext_resource path="res://icons/icon_replay.svg" type="Texture" id=6]
[ext_resource path="res://icons/icon_save.svg" type="Texture" id=7]
[ext_resource path="res://icons/progress/progress_icon.tres" type="Texture" id=8]
[ext_resource path="res://views/editor/run_generation_button.gd" type="Script" id=9]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="InputEventKey" id=2]
control = true
command = true
scancode = 83

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 2 )

[sub_resource type="InputEventKey" id=4]
control = true
command = true
scancode = 82

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[node name="GraphEditorView" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
viewport_container = NodePath("VBoxContainer/HSplitContainer/HSplitContainer/ViewportArea/ViewportContainer")
template = NodePath("VBoxContainer/HSplitContainer/HSplitContainer/Template")
add_node_dialog = NodePath("AddNodeDialog")
inspector = NodePath("VBoxContainer/HSplitContainer/Inspector")

[node name="VBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1366.0
margin_bottom = 768.0

[node name="ToolShelf" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 28.0
margin_bottom = 768.0

[node name="Save" type="Button" parent="VBoxContainer/ToolShelf"]
margin_right = 28.0
margin_bottom = 22.0
hint_tooltip = "Save the current template on disk"
focus_mode = 0
shortcut = SubResource( 3 )
icon = ExtResource( 7 )
clip_text = true

[node name="RunGeneration" type="Button" parent="VBoxContainer/ToolShelf"]
margin_top = 26.0
margin_right = 28.0
margin_bottom = 48.0
hint_tooltip = "Generates the end result of your template. This should happen automatically as you edit the graph but if it doesn't, you can click this button to force the template to regenerate its result."
focus_mode = 0
shortcut = SubResource( 5 )
icon = ExtResource( 6 )
clip_text = true
script = ExtResource( 9 )
normal_icon = ExtResource( 6 )
animated_icon = ExtResource( 8 )

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer"]
margin_left = 32.0
margin_right = 1366.0
margin_bottom = 768.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer" type="VSplitContainer" parent="VBoxContainer/HSplitContainer"]
margin_right = 994.0
margin_bottom = 768.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="Template" type="GraphEdit" parent="VBoxContainer/HSplitContainer/HSplitContainer"]
margin_right = 994.0
margin_bottom = 454.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5
right_disconnects = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
inspector_panel = NodePath("../../Inspector")

[node name="ViewportArea" parent="VBoxContainer/HSplitContainer/HSplitContainer" instance=ExtResource( 3 )]
margin_top = 466.0
margin_right = 994.0
margin_bottom = 768.0
rect_min_size = Vector2( 256, 128 )

[node name="Inspector" parent="VBoxContainer/HSplitContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1006.0
margin_right = 1334.0
margin_bottom = 768.0

[node name="AddNodeDialog" parent="." instance=ExtResource( 5 )]
margin_left = 7.0
margin_top = 7.0
margin_right = 519.0
margin_bottom = 407.0
[connection signal="pressed" from="VBoxContainer/ToolShelf/Save" to="." method="save_template"]
[connection signal="pressed" from="VBoxContainer/ToolShelf/RunGeneration" to="." method="regenerate"]
[connection signal="exposed_variables_updated" from="VBoxContainer/HSplitContainer/HSplitContainer/Template" to="." method="_on_exposed_variables_updated"]
[connection signal="graph_changed" from="VBoxContainer/HSplitContainer/HSplitContainer/Template" to="." method="_on_graph_changed"]
[connection signal="popup_request" from="VBoxContainer/HSplitContainer/HSplitContainer/Template" to="." method="_show_node_dialog"]
[connection signal="simulation_completed" from="VBoxContainer/HSplitContainer/HSplitContainer/Template" to="VBoxContainer/ToolShelf/RunGeneration" method="_on_simulation_completed"]
[connection signal="simulation_completed" from="VBoxContainer/HSplitContainer/HSplitContainer/Template" to="." method="_on_simulation_completed"]
[connection signal="simulation_outdated" from="VBoxContainer/HSplitContainer/HSplitContainer/Template" to="." method="_on_simulation_outdated"]
[connection signal="simulation_started" from="VBoxContainer/HSplitContainer/HSplitContainer/Template" to="VBoxContainer/ToolShelf/RunGeneration" method="_on_simulation_started"]
[connection signal="value_changed" from="VBoxContainer/HSplitContainer/Inspector" to="." method="_on_inspector_value_changed"]
[connection signal="create_node" from="AddNodeDialog" to="." method="_on_create_node_request"]
